# orwynn.py

./: .gitignore  CHANGELOG.md  Dockerfile.docs  LICENSE  Makefile  README.md  changelog.md  conftest.py  docker-compose.docs.yml  justfile  license  makefile  mkdocs.yml  orwynn.code-workspace  orwynn_cfg.py  pyproject.toml  readme.md  ruff.toml
docs/: AppMode.md  DI.md  Development.md  GenerateCLI.md  GettingStarted.md  index.md  reference.md
example/blog/: main.py
orwynn/: BUILTIN_MIDDLEWARE.py  SUBCLASSABLES.py  SUBCLASSABLE_CLASSES.py  __init__.py  _cfg.py  _models.py  _pepel.py  _plugin.py  admin.py  app.py  auth.py  boot.py  cfg.py  controller.py  dto.py  env.py  generic.py  http.py  middleware.py  middlewares.py  models.py  mongo.py  msg.py  plugin.py  preload.py  proxy.py  query_exts.py  rbac.py  sys.py  testing.py  tst.py  utils.py  ws.py
orwynn/_di/: BUILTIN_ACCEPTORS.py  BUILTIN_PROVIDERS.py  Di.py  DiContainer.py  DiObjectAlreadyInitializedInContainerError.py  FinalizedDiContainerError.py  MissingDiObjectError.py  NoAnnotationError.py  NotProviderError.py  Provider.py  ProviderAvailabilityError.py  __init__.py  _collect_dependencies_for_acceptor.py  check_availability.py  circular_dependency_error.py  di_test.py  is_acceptor.py  is_provider.py
orwynn/_testingtools/: __init__.py
orwynn/apiversion/: _ApiVersion.py  _UnsupportedVersionError.py  __init__.py  api_version_test.py  errors.py  test_main.py
orwynn/app/: AlreadyRegisteredMethodError.py  App.py  AppService.py  CoreApp.py  DefaultErrorHandler.py  DefaultExceptionHandler.py  DefaultHTTPExceptionHandler.py  DefaultRequestValidationExceptionHandler.py  EmptyRouteError.py  ErrorHandler.py  _ApiRouter.py  _ApiWebsocketRoute.py  _App.py  _AppConfig.py  _AppMode.py  _AppService.py  _CoreApp.py  _DefaultExceptionHandler.py  _EmptyRouteError.py  _ErrorHandler.py  __init__.py  _app_test.py  _error_handler_test.py  _get_dependant.py  already_registered_method_error.py  already_registered_route_error.py  apiwebsocketroute.py  app.py  app_mode.py  app_mode_enum.py  app_service.py  app_test.py  config.py  empty_route_error.py  error_handler_test.py  errors.py  incorrect_route_error.py  test_main.py  types.py  utils.py
orwynn/app_rc/: APP_RC_MODE_NESTING.py  AppRC.py  AppRCSearchError.py
orwynn/apprc/: APP_RC_MODE_NESTING.py  AppRC.py  AppRc.py  AppRcSearchError.py  _APP_RC_MODE_NESTING.py  _AppRc.py  _AppRcSearchError.py  __init__.py  _parse_apprc.py  apprc_test.py  constants.py  parse.py  parse_apprc.py  test_main.py  utils.py
orwynn/base/: SUBCLASSABLES.py  _BaseSubclassable.py  _SUBCLASSABLES.py  __init__.py
orwynn/boot/: BOOT_CONFIG_PROXY_DATA.py  Boot.py  BootConfig.py  BootConfigProxy.py  BootDataProxy.py  BootMode.py  UnknownBootModeError.py  UnknownSourceError.py  UnsupportedBootModeError.py  _Boot.py  _BootConfig.py  _BootDataProxy.py  _BootProxy.py  _UnknownBootModeError.py  _UnknownSourceError.py  __init__.py  boot.py  boot_config.py  boot_data_proxy_test.py  boot_error.py  boot_mode.py  boot_test.py  config.py  errors.py  test_main.py  unsupported_boot_mode_error.py
orwynn/bootscript/: _Bootscript.py  _BootscriptCallable.py  _BootscriptWorker.py  __init__.py  bootscript.py  bootscript_test.py  callable.py  calltime.py  test_main.py  worker.py
orwynn/cli/: __init__.py  __main__.py  cli.py  models.py
orwynn/cls/: __init__.py  cls_test.py  errors.py  helpers.py
orwynn/config/: Config.py
orwynn/context/: AlreadyInitializedStorageError.py  ContextStorage.py  (+14 more)
tests/: __init__.py  conftest.py  structs.py  test_cors.py  test_opts.py  test_plugin.py  test_rpc.py  test_rxcat.py  test_sys.py  test_tmp.py
(+1357 files in other folders)
