[tool.poetry]
name = "orwynn"
version = "1.4.0"
description = "Scalable web-framework with out-of-the-box architecture"
homepage = "https://orwynn.ryzhovalex.com"
documentation = "https://orwynn.ryzhovalex.com"
keywords = [
    "framework", "architecture", "backend", "web-framework", "out of the box"
]
repository = "https://github.com/ryzhovalex/orwynn"
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pyjwt = "^2.6.0"
pymongo = "^4.3.3"
sqlalchemy = "^2.0.3"
psycopg2 = "^2.9.5"
typing-extensions = "^4.7.1"
aiohttp = { extras = ["speedups"], version = "^3.9.3" }
rxcat = { path = "../rxcat/lib/pyrxcat", develop = true }
fcode = { path = "../fcode/lib/pyfcode", develop = true }
pykit = { path = "../pykit", develop = true }
uvicorn = { path = "../uvicorn", develop = true }

pydantic = "^2.6.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
lorem = "^0.1.1"
ruff = "^0.1.15"
git-changelog = "^1.0.0"
coverage = "^6.5.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
