[tool.poetry]
name = "orwynn"
version = "2.3.4"
description = "Scalable web-framework with out-of-the-box architecture"
homepage = "https://orwynn.ryzhovalex.com"
documentation = "https://orwynn.ryzhovalex.com"
keywords = [
    "framework", "architecture", "backend", "web-framework", "out of the box"
]
repository = "https://github.com/ryzhovalex/orwynn"
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pyjwt = "^2.6.0"
pymongo = "^4.3.3"
sqlalchemy = "^2.0.3"
psycopg2 = "^2.9.5"
typing-extensions = "^4.7.1"
aiohttp = { extras = ["speedups"], version = "^3.9.3" }

pydantic = "^2.6.0"
aiofiles = "^23.2.1"
aiohttp-cors = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
rxcat = {git = "https://github.com/slimebones/pyrxcat.git", rev = "0.1.1"}
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
lorem = "^0.1.1"
ruff = "0.1.15"
git-changelog = "^1.0.0"
coverage = "^6.5.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
